--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,14 @@ android {
 dependencies {
     compile files('libs/ActiveAndroid-3.1-adcddac4c58.jar')
     compile files('libs/android-async-http-1.4.3.jar')
-    compile files('libs/android-support-v4.jar')
+//    compile files('libs/android-support-v4.jar')
     compile files('libs/codepath-oauth-0.3.0.jar')
     compile files('libs/codepath-utils.jar')
     compile files('libs/scribe-codepath.jar')
 //    compile files('libs/universal-image-loader-1.8.4.jar')
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
-    compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.google.code.gson:gson:2.3'
+//    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
+    compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.android.support:appcompat-v7:20.0.0'
 }
